@@ -211,7 +211,9 @@ import javax.swing.KeyStroke;
  *  you can use this method with one of these predefined colors in standard drawing:
  *  {@link #BLACK}, {@link #BLUE}, {@link #CYAN}, {@link #DARK_GRAY}, {@link #GRAY},
  *  {@link #GREEN}, {@link #LIGHT_GRAY}, {@link #MAGENTA}, {@link #ORANGE},
- *  {@link #PINK}, {@link #RED}, {@link #WHITE}, and {@link #YELLOW}.
+ *  {@link #PINK}, {@link #RED}, {@link #WHITE}, {@link #YELLOW},
+ *  {@link #BOOK_BLUE}, {@link #BOOK_LIGHT_BLUE}, {@link #BOOK_RED}, and
+ *  {@link #PRINCETON_ORANGE}.
  *  For example, {@code StdDraw.setPenColor(StdDraw.MAGENTA)} sets the
  *  pen color to magenta.
  *  <p>
@@ -355,7 +357,7 @@ import javax.swing.KeyStroke;
  *  <li> Wait for a short while.
  *  </ul>
  *  <p>
- *  The {@link #clear()}, {@link #show()}, and {@link #pause(int dt)} methods
+ *  The {@link #clear()}, {@link #show()}, and {@link #pause(int t)} methods
  *  support the first, third, and fourth of these steps, respectively.
  *  <p>
  *  For example, this code fragment animates two balls moving in a circle.
@@ -379,7 +381,7 @@ import javax.swing.KeyStroke;
  *  It is much less powerful than most user interface libraries provide, but also much simpler.
  *  You can use the following methods to intercept mouse events:
  *  <ul>
- *  <li> {@link #mousePressed()}
+ *  <li> {@link #isMousePressed()}
  *  <li> {@link #mouseX()}
  *  <li> {@link #mouseY()}
  *  </ul>
@@ -552,6 +554,12 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      */
     public static final Color BOOK_RED = new Color(150, 35, 31);
 
+    /**
+     * Shade of orange used in Princeton University's identity.
+     * It is PMS 158. The RGB values are approximately (245, 128, 37).
+     */
+    public static final Color PRINCETON_ORANGE = new Color(245, 128, 37);
+
     // default colors
     private static final Color DEFAULT_PEN_COLOR   = BLACK;
     private static final Color DEFAULT_CLEAR_COLOR = WHITE;
@@ -603,7 +611,7 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
     private static JFrame frame;
 
     // mouse state
-    private static boolean mousePressed = false;
+    private static boolean isMousePressed = false;
     private static double mouseX = 0;
     private static double mouseY = 0;
 
@@ -612,10 +620,6 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
 
     // set of key codes currently pressed down
     private static TreeSet<Integer> keysDown = new TreeSet<Integer>();
-
-    // time in milliseconds (from currentTimeMillis()) when we can draw again
-    // used to control the frame rate
-    private static long nextDraw = -1;  
 
     // singleton pattern: client can't instantiate
     private StdDraw() { }
@@ -1189,12 +1193,14 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      *         are of the same length
      */
     public static void polygon(double[] x, double[] y) {
-        if (x == null) throw new IllegalArgumentException();
-        if (y == null) throw new IllegalArgumentException();
+        if (x == null) throw new IllegalArgumentException("x-coordinate array is null");
+        if (y == null) throw new IllegalArgumentException("y-coordinate array is null");
         int n1 = x.length;
         int n2 = y.length;
         if (n1 != n2) throw new IllegalArgumentException("arrays must be of the same length");
         int n = n1;
+        if (n == 0) return;
+
         GeneralPath path = new GeneralPath();
         path.moveTo((float) scaleX(x[0]), (float) scaleY(y[0]));
         for (int i = 0; i < n; i++)
@@ -1216,12 +1222,14 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      *         are of the same length
      */
     public static void filledPolygon(double[] x, double[] y) {
-        if (x == null) throw new IllegalArgumentException();
-        if (y == null) throw new IllegalArgumentException();
+        if (x == null) throw new IllegalArgumentException("x-coordinate array is null");
+        if (y == null) throw new IllegalArgumentException("y-coordinate array is null");
         int n1 = x.length;
         int n2 = y.length;
         if (n1 != n2) throw new IllegalArgumentException("arrays must be of the same length");
         int n = n1;
+        if (n == 0) return;
+
         GeneralPath path = new GeneralPath();
         path.moveTo((float) scaleX(x[0]), (float) scaleY(y[0]));
         for (int i = 0; i < n; i++)
@@ -1523,27 +1531,13 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      * Copies the offscreen buffer to the onscreen buffer, pauses for t milliseconds
      * and enables double buffering.
      * @param t number of milliseconds
-     * @deprecated replaced by {@link #enableDoubleBuffering}, {@link #show()}, and {@link #pause}
+     * @deprecated replaced by {@link #enableDoubleBuffering()}, {@link #show()}, and {@link #pause(int t)}
      */
     @Deprecated
     public static void show(int t) {
-        // sleep until the next time we're allowed to draw
-        long millis = System.currentTimeMillis();
-        if (millis < nextDraw) {
-            try {
-                Thread.sleep(nextDraw - millis);
-            }
-            catch (InterruptedException e) {
-                System.out.println("Error sleeping");
-            }
-            millis = nextDraw;
-        }
-
         show();
+        pause(t);
         enableDoubleBuffering();
-
-        // when are we allowed to draw again
-        nextDraw = millis + t;
     }
 
     /**
@@ -1551,20 +1545,12 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      * @param t number of milliseconds
      */
     public static void pause(int t) {
-        // sleep until the next time we're allowed to draw
-        long millis = System.currentTimeMillis();
-        if (millis < nextDraw) {
-            try {
-                Thread.sleep(nextDraw - millis);
-            }
-            catch (InterruptedException e) {
-                System.out.println("Error sleeping");
-            }
-            millis = nextDraw;
+        try {
+            Thread.sleep(t);
         }
-
-        // when are we allowed to draw again
-        nextDraw = millis + t;
+        catch (InterruptedException e) {
+            System.out.println("Error sleeping");
+        }
     }
 
     /**
@@ -1677,9 +1663,22 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      *
      * @return {@code true} if the mouse is being pressed; {@code false} otherwise
      */
+    public static boolean isMousePressed() {
+        synchronized (mouseLock) {
+            return isMousePressed;
+        }
+    }
+
+    /**
+     * Returns true if the mouse is being pressed.
+     *
+     * @return {@code true} if the mouse is being pressed; {@code false} otherwise
+     * @deprecated replaced by {@link #isMousePressed()}
+     */
+    @Deprecated
     public static boolean mousePressed() {
         synchronized (mouseLock) {
-            return mousePressed;
+            return isMousePressed;
         }
     }
 
@@ -1738,7 +1737,7 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
         synchronized (mouseLock) {
             mouseX = StdDraw.userX(e.getX());
             mouseY = StdDraw.userY(e.getY());
-            mousePressed = true;
+            isMousePressed = true;
         }
     }
 
@@ -1748,7 +1747,7 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
     @Override
     public void mouseReleased(MouseEvent e) {
         synchronized (mouseLock) {
-            mousePressed = false;
+            isMousePressed = false;
         }
     }
 
@@ -1808,7 +1807,8 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
             if (keysTyped.isEmpty()) {
                 throw new NoSuchElementException("your program has already processed all keystrokes");
             }
-            return keysTyped.removeLast();
+            return keysTyped.remove(keysTyped.size() - 1);
+            // return keysTyped.removeLast();
         }
     }
 
@@ -1870,19 +1870,19 @@ public final class StdDraw implements ActionListener, MouseListener, MouseMotion
      * @param args the command-line arguments
      */
     public static void main(String[] args) {
-        StdDraw.square(.2, .8, .1);
-        StdDraw.filledSquare(.8, .8, .2);
-        StdDraw.circle(.8, .2, .2);
+        StdDraw.square(0.2, 0.8, 0.1);
+        StdDraw.filledSquare(0.8, 0.8, 0.2);
+        StdDraw.circle(0.8, 0.2, 0.2);
 
         StdDraw.setPenColor(StdDraw.BOOK_RED);
-        StdDraw.setPenRadius(.02);
-        StdDraw.arc(.8, .2, .1, 200, 45);
+        StdDraw.setPenRadius(0.02);
+        StdDraw.arc(0.8, 0.2, 0.1, 200, 45);
 
         // draw a blue diamond
         StdDraw.setPenRadius();
         StdDraw.setPenColor(StdDraw.BOOK_BLUE);
-        double[] x = { .1, .2, .3, .2 };
-        double[] y = { .2, .3, .2, .1 };
+        double[] x = { 0.1, 0.2, 0.3, 0.2 };
+        double[] y = { 0.2, 0.3, 0.2, 0.1 };
         StdDraw.filledPolygon(x, y);
 
         // text
